--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,8 @@ h3 {
   color: gray;
 }
 
-#underline {
+span a {
+  display: inline;
   text-decoration: underline;
   text-decoration-style: dotted;
 }
