--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 body {
   background-color: black;
   background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.9)),
-                    url("img/background2.jpg");
+                    url("img/background.jpg");
   background-repeat: no-repeat;
 
   color: rgb(241, 241, 241);
